Vertex paint is not visible in X-Ray view #70807

Closed
opened 2019-10-14 11:03:39 +02:00 by Erick Tukuniata · 18 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51

Blender Version
Broken: version: 2.82 (sub 0), branch: master, commit date: 2019-10-11 23:26, hash: bde328352b
Worked: (optional)

Short description of error
Vertex paint is not visible in X-Ray shading

Exact steps for others to reproduce the error

  • Open default cube file
  • subdivide or remesh cube
  • activate x-ray view
  • paint cube -> paint is not visible.
  • deactivate x-ray shading -> paint is visible.
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51 **Blender Version** Broken: version: 2.82 (sub 0), branch: master, commit date: 2019-10-11 23:26, hash: `bde328352b` Worked: (optional) **Short description of error** Vertex paint is not visible in X-Ray shading **Exact steps for others to reproduce the error** - Open default cube file - subdivide or remesh cube - activate x-ray view - paint cube -> paint is not visible. - deactivate x-ray shading -> paint is visible.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

#74654 was marked as duplicate of this issue

#74654 was marked as duplicate of this issue

#75077 was marked as duplicate of this issue

#75077 was marked as duplicate of this issue
Member

Added subscribers: @JulienKaspar, @Jeroen-Bakker, @lichtwerk

Added subscribers: @JulienKaspar, @Jeroen-Bakker, @lichtwerk
Member

This is actually working in wireframe. It is X-Ray, where this starts behaving differently [X-Ray with alpha < 1 will not paint the overlays in the occluded areas]

I can see the usecase with lots of other objects occluding, of course one could work around this with stuff like Local View or staying in solid and switching the other occluding object Viewport Display > Display As to Wireframe etc.
But it was more convenient in 2.79 afaics.

@Jeroen-Bakker: what do you think? CC @JulienKaspar [to get an artists perspective...]

This is actually working in wireframe. It is X-Ray, where this starts behaving differently [X-Ray with alpha < 1 will not paint the overlays in the occluded areas] I can see the usecase with lots of other objects occluding, of course one could work around this with stuff like Local View or staying in solid and switching the other occluding object Viewport Display > Display As to Wireframe etc. But it was more convenient in 2.79 afaics. @Jeroen-Bakker: what do you think? CC @JulienKaspar [to get an artists perspective...]

Added subscriber: @iss

Added subscriber: @iss

@lichtwerk Testing this now, and I can paint occluded areas in x-ray shading. Paint is not visible though.

Should we close this?

@lichtwerk Testing this now, and I can paint occluded areas in x-ray shading. Paint is not visible though. Should we close this?

In #70807#849028, @iss wrote:
@lichtwerk Testing this now, and I can paint occluded areas in x-ray shading. Paint is not visible though.

Should we close this?

This is the problem how can you paint when you cannot see what you are painting? Now the workflow for skinning is a bit cumbersome because you have to activate many other options when before it was straight forward.

> In #70807#849028, @iss wrote: > @lichtwerk Testing this now, and I can paint occluded areas in x-ray shading. Paint is not visible though. > > Should we close this? This is the problem how can you paint when you cannot see what you are painting? Now the workflow for skinning is a bit cumbersome because you have to activate many other options when before it was straight forward.
Richard Antalik changed title from wireframe mode doesn't paint the hidden part of the mesh to Vertex paint is not visible in X-Ray view 2020-01-15 17:13:53 +01:00

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2020-03-13 16:41:44 +01:00
Member

The bug was confirmed, but cannot be reproduced in the latest daily build, so it appears the bug has been fixed already.

Please try the latest daily build: https://builder.blender.org/download/

If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again.

The bug was confirmed, but cannot be reproduced in the latest daily build, so it appears the bug has been fixed already. Please try the latest daily build: https://builder.blender.org/download/ If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again.

I tested it in Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54

While weight painting is working when having bones and mesh in weight paint mode and pose mode, activating x-ray or "infront" with only mesh selected hide the paint session.
check the video. x-ray_painting0001.avi

I tested it in Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54 While weight painting is working when having bones and mesh in weight paint mode and pose mode, activating x-ray or "infront" with only mesh selected hide the paint session. check the video. [x-ray_painting0001.avi](https://archive.blender.org/developer/F8413806/x-ray_painting0001.avi)
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

I will have a look tomorrow

I will have a look tomorrow
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84

This issue was referenced by 1ca1744c29

This issue was referenced by 1ca1744c29e299f36a83506aec23d9bc99b6e48c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @CleverMonkey, @fclem, @ankitm

Added subscribers: @CleverMonkey, @fclem, @ankitm
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70807
No description provided.